@@ -287,6 +287,7 @@ my $build = OpenGuides::Build->new(
         'File::Spec::Functions'               => 0,
         'File::Temp'                          => 0,
         'Geography::NationalGrid'             => 0,
+        'HTML::Entities'                      => 0,
         'LWP::Simple'                         => 0,
         'Parse::RecDescent'                   => 0,
         $search_module                        => 0,
@@ -355,6 +356,7 @@ $build->{config}{__templates}         = [
                       "node_history.tt",
                       "node_image_fields.tt",
                       "node_photo_notes.tt",
+                      "node_rdf.tt",
                       "openguides_information_boxes.tt",
                       "preferences.tt",
                       "rdf_index.tt",
