@@ -62,6 +62,7 @@ templates/node.tt
 templates/node_history.tt
 templates/node_image_fields.tt
 templates/node_photo_notes.tt
+templates/node_rdf.tt
 templates/openguides_information_boxes.tt
 templates/plain_index.tt
 templates/preferences.tt
